deploy/networking-and-service-examples/5-ingress/foo/svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: foo-np
  namespace: foo
spec:
  ports:
    - port: 80
      protocol: TCP
  type: NodePort
  selector:
    app: foo
